--- a/.github/workflows/test-builds.yml
+++ b/.github/workflows/test-builds.yml
@@ -12,7 +12,7 @@ jobs:
   test-ubuntu:
     strategy:
       matrix:
-        version: [ "22.04", "23.04" ]
+        version: [ "22.04", "23.10" ]
         de_name: [ "gnome", "kde", "xfce", "lxqt", "budgie", "deepin", "cinnamon", "cli" ]
     runs-on: ubuntu-latest
     steps:
@@ -87,7 +87,7 @@ jobs:
   test-fedora:
     strategy:
       matrix:
-        version: [ "38", "39" ]
+        version: [ "39" ]
         de_name: [ "gnome", "kde", "xfce", "lxqt", "deepin", "budgie", "cinnamon", "cli" ]
     runs-on: ubuntu-latest
     steps:
