--- a/.github/workflows/test-builds.yml
+++ b/.github/workflows/test-builds.yml
@@ -171,7 +171,7 @@ jobs:
 
           # Optional. Commit message for the created commit.
           # Defaults to "Apply automatic changes"
-          commit_message: chore: update os_sizes.json
+          commit_message: "chore: update os_sizes.json"
 
           # Optional glob pattern of files which should be added to the commit
           # Defaults to all (.)
